# alerce_client

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  alerce_client.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stamps.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  general-question.md
.github/workflows/: build.yml  move_issues.yaml  tests.yml  version_update.yml
alerce/: __init__.py  api.py  common_search.py  common_stamps.py  config_example.py  core.py  crossmatch.py  default_config.json  direct.py  exceptions.py  global_search.py  lsst_search.py  ms_search.py  ms_search_utils.py  ms_stamp.py  ms_stamp_utils.py  ms_stamps.py  search.py  stamps.py  utils.py  ztf_search.py
alerce_api/: __init__.py
doc/source/: api.rst  conf.py  index.rst
docs/source/: apis.rst  conf.py  index.rst  migration_guide.rst  models.rst  stamps_api.rst  xmatch_api.rst  ztf_api.rst
tests/: api.py  catshtm_testcases.py  test_direct.py  test_direct_request.py  test_mongo.py  test_query_classes.py  test_query_classifiers.py  test_query_detections.py  test_query_feature.py  test_query_features.py  test_query_forced_photometry.py  test_query_lightcurve.py  test_query_magstats.py  test_query_non_detections.py  test_query_object.py  test_query_objects.py  test_query_probabilities.py  test_search.py  test_stamps.py  test_xmatch.py
tests/examples/: example.fits
tests/integration/: test_query_classes.py  test_query_classifiers.py  (+11 more)
(+27 files in other folders)
